Changing JSON file photo
I saw one of the photos where wrong.

--- a/app.json
+++ b/app.json
@@ -15,7 +15,7 @@
     "id": 2,
     "title": "Dusty Rose",
     "description": "Our Popular speaker in a beautiful dusty rose color.",
-    "image": "Images/Lumina grøn højtaler til site.png",
+    "image": "Images/Lumina rød højtaler til site.png",
     "genre": "Speaker",
     "playtime": "Up to 30 hours",
     "Price": "1999 DKK",
